# ropencode

./: .gitignore  Cargo.toml  README.md
prd/: todo.md
src/: acp.rs  config.rs  main.rs  model.rs  tui.rs
